PFCheckout for Commerce 1.0.2-pl
---------------------------------
Released on 21/01/2023

- Update postfinancecheckout/sdk composer dependency.
- Update successful transaction state to "FULFILL". This is due a breaking change in the API.

PFCheckout for Commerce 1.0.1-pl
---------------------------------
Released on 30/03/2021

- Removed requirement for template system setting. Commerce gives preference to theme templates over module templates so it isn't needed.
- Added optional logging to transaction->log()

PFCheckout for Commerce 1.0.0-pl
---------------------------------
Released on 30/03/2021

- First pl release

PFCheckout for Commerce 1.0.0-beta2
---------------------------------
Released on 30/01/2021

- Fixed a bug when calculating orderItem total pricing. Use $orderItem rather than $order.

PFCheckout for Commerce 1.0.0-beta1
---------------------------------
Released on 29/01/2021

- First beta release