@@ -80,7 +80,7 @@ switch($options[xPDOTransport::PACKAGE_ACTION]) {
         }
 
         if (!checkVersion('PHP', PHP_VERSION, [
-            '2019-07-01 12:00:00' => '7.1',
+            '2023-08-25 12:00:00' => '7.4',
         ], $modx)) {
             $success = false;
         }
@@ -93,7 +93,7 @@ switch($options[xPDOTransport::PACKAGE_ACTION]) {
         $commerce = $modx->getService('commerce', 'Commerce', $corePath, $params);
         if ($commerce instanceof Commerce) {
             if (!checkVersion('Commerce', (string)$commerce->version, [
-                '2019-01-01 12:00:00' => '1.1',
+                '2023-08-25 12:00:00' => '1.3',
             ], $modx)) {
                 $success = false;
             }
@@ -110,9 +110,7 @@ switch($options[xPDOTransport::PACKAGE_ACTION]) {
             // Check for EOL PHP versions
             $modx->log(xPDO::LOG_LEVEL_INFO, 'Checking (optional) recommended versions...');
             checkVersion('PHP', PHP_VERSION, [
-                '2019-12-01 12:00:00' => '7.2',
-                '2020-11-30 12:00:00' => '7.3',
-                '2021-12-06 12:00:00' => '7.4',
+                '2023-08-25 12:00:00' => '8.1',
             ], $modx);
         }
         else {
