@@ -1,6 +1,6 @@
 {
     "require": {
-        "php": ">=7.1.0",
+        "php": ">=7.4.0",
         "postfinancecheckout/sdk": "^3.1"
     },
     "autoload": {
